--- a/SimpleBluetoothLeTerminal-master/app/src/main/res/values/strings.xml
+++ b/SimpleBluetoothLeTerminal-master/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple BLE Terminal</string>
+    <string name="app_name">BLE Terminal</string>
     <string name="devices">Bluetooth LE Devices</string>
 
     <string name="location_permission_title">Location permission required</string>
